--- a/Gym_App/app/src/main/res/layout/activity_tipo_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/activity_tipo_ejercicio.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActividadFragmentos">
+    android:fitsSystemWindows="true"
+    tools:context=".TipoEjercicio">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_actividad_fragmentos" />
+    <include layout="@layout/content_tipo_ejercicio" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
