--- a/Gym_App/app/src/main/res/layout/content_tipo_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/content_tipo_ejercicio.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ActividadFragmentos"
-    tools:showIn="@layout/activity_actividad_fragmentos">
+    tools:context=".TipoEjercicio"
+    tools:showIn="@layout/activity_tipo_ejercicio">
 
-    <FrameLayout
-        android:id="@+id/fragmento_tipo_ejercicio"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_tipo_ejercicio"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </FrameLayout>
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
