--- a/Gym_App/app/src/main/res/layout/item_tipo_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/item_tipo_ejercicio.xml
@@ -2,19 +2,21 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="80dp"
     android:orientation="horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imagen_lista"
+        android:id="@+id/imagen_tipo_ejercicio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
+        android:padding="3dp"
+        android:layout_gravity="center_vertical"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/nombre_ejercicio"
+        android:id="@+id/nombre_tipo_ejercicio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.7"
