Cambios dialogo inicio - Mendivil

--- a/Gym_App/app/src/main/res/layout/item_tipo_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/item_tipo_ejercicio.xml
@@ -2,15 +2,18 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="56dp"
     android:orientation="horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imagen_tipo_ejercicio"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.3"
-        android:padding="3dp"
+        android:layout_height="40sp"
+        android:layout_weight="0.2"
+        android:layout_marginTop="8sp"
+        android:layout_marginBottom="8sp"
+        android:layout_marginStart="16sp"
+        android:layout_marginEnd="8sp"
         android:layout_gravity="center_vertical"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher" />
@@ -19,8 +22,8 @@
         android:id="@+id/nombre_tipo_ejercicio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.7"
-        android:padding="10dp"
+        android:layout_weight="0.8"
+        android:textSize="16sp"
         android:text="Torso"
         style="@style/Base.TextAppearance.AppCompat.Large"
         android:layout_gravity="center_vertical"
@@ -28,8 +31,8 @@
 
     <CheckBox
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="24sp"
         android:layout_gravity="center_vertical"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginEnd="16sp"/>
 
 </LinearLayout>
