--- a/Gym_App/app/src/main/res/layout/item_tipo_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/item_tipo_ejercicio.xml
@@ -2,28 +2,30 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="72dp"
     android:orientation="horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imagen_tipo_ejercicio"
-        android:layout_width="0dp"
-        android:layout_height="40sp"
-        android:layout_weight="0.2"
-        android:layout_marginTop="8sp"
+        android:layout_width="56sp"
+        android:layout_height="56sp"
+        android:layout_gravity="start|center_vertical"
         android:layout_marginBottom="8sp"
-        android:layout_marginStart="16sp"
         android:layout_marginEnd="8sp"
-        android:layout_gravity="center_vertical"
+        android:layout_marginStart="16sp"
+        android:layout_marginTop="8sp"
+        android:adjustViewBounds="false"
+        android:cropToPadding="false"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/profile" />
 
     <TextView
         android:id="@+id/nombre_tipo_ejercicio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.8"
+        android:layout_weight="1"
         android:textSize="16sp"
+        android:layout_marginStart="16sp"
         android:text="Torso"
         style="@style/Base.TextAppearance.AppCompat.Large"
         android:layout_gravity="center_vertical"
