--- a/Gym_App/app/src/main/res/layout/content_descripcion_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/content_descripcion_ejercicio.xml
@@ -19,9 +19,20 @@
         android:layout_width="match_parent"
         android:layout_height="197dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/youtube_player">
+        android:layout_below="@+id/youtube_player"
+        app:cardCornerRadius="6dp">
 
 
+       <!--<TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Descripcion" />-->
+
+        <TextView
+            android:id="@+id/descripcion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Descripcion" />
     </android.support.v7.widget.CardView>
-    
+
 </RelativeLayout>
