--- a/Gym_App/app/src/main/res/layout/content_descripcion_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/content_descripcion_ejercicio.xml
@@ -1,38 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".DescripcionEjercicio"
     tools:showIn="@layout/activity_descripcion_ejercicio">
 
-    <com.google.android.youtube.player.YouTubePlayerView
-        android:id="@+id/youtube_player"
+    <fragment
+        android:id="@+id/youtubeFragment"
         android:layout_width="match_parent"
-        android:layout_height="228dp">
+        android:layout_height="198dp"
+        android:name="com.google.android.youtube.player.YouTubePlayerFragment">
+    </fragment>
 
-    </com.google.android.youtube.player.YouTubePlayerView>
 
     <android.support.v7.widget.CardView
+        android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="197dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/youtube_player"
         app:cardCornerRadius="6dp">
 
-
-       <!--<TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Descripcion" />-->
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/descripcion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Descripcion" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/texto_descripcion"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/descripcion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+        </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
-</RelativeLayout>
+</LinearLayout>
