--- a/Gym_App/app/src/main/res/layout/app_bar_principal.xml
+++ b/Gym_App/app/src/main/res/layout/app_bar_principal.xml
@@ -25,6 +25,10 @@
             android:id="@+id/pestanias"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabIndicatorHeight="2dp"
+            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+            app:tabSelectedTextColor="@android:color/white"
+            app:tabTextColor="@android:color/white"
             app:tabMode="fixed" />
 
     </android.support.design.widget.AppBarLayout>
