--- a/Gym_App/app/src/main/res/layout/activity_login.xml
+++ b/Gym_App/app/src/main/res/layout/activity_login.xml
@@ -69,6 +69,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
+            android:textAllCaps="false"
             android:text="Login"/>
 
         <TextView android:id="@+id/link_signup"
