--- a/Gym_App/app/src/main/res/layout/activity_registro.xml
+++ b/Gym_App/app/src/main/res/layout/activity_registro.xml
@@ -27,7 +27,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:fontFamily="sans-serif-medium"
             android:layout_marginBottom="20dp"
             android:layout_gravity="center_horizontal" />
 
@@ -84,7 +83,8 @@
             android:padding="12dp"
             android:text="Registrar"/>
 
-        <TextView android:id="@+id/link_signin"
+        <TextView
+            android:id="@+id/link_signin"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
