--- a/Gym_App/app/src/main/res/layout/content_descripcion_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/content_descripcion_ejercicio.xml
@@ -21,12 +21,12 @@
         android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="197dp"
-        android:layout_alignParentStart="true"
         app:cardCornerRadius="6dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="4dp"
             android:orientation="vertical">
 
             <TextView
