--- a/Gym_App/app/src/main/res/layout/item_tipo_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/item_tipo_ejercicio.xml
@@ -27,6 +27,7 @@
         android:textSize="16sp"
         android:layout_marginStart="16sp"
         android:text="Torso"
+        android:fontFamily="@font/product_sans_regular"
         style="@style/Base.TextAppearance.AppCompat.Large"
         android:layout_gravity="center_vertical"
         />
@@ -35,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="24sp"
         android:layout_gravity="center_vertical"
+        android:fontFamily="@font/product_sans_regular"
         android:layout_marginEnd="16sp"/>
 
 </LinearLayout>
