Organizacion de activities

--- a/Gym_App/app/src/main/res/layout/activity_descripcion_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/activity_descripcion_ejercicio.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DescripcionEjercicio"
+    tools:context=".activities.DescripcionEjercicio"
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
