--- a/Gym_App/app/src/main/res/layout/content_tipo_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/content_tipo_ejercicio.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".TipoEjercicio"
+    tools:context=".activities.TipoEjercicio"
     tools:showIn="@layout/activity_tipo_ejercicio">
 
     <android.support.v7.widget.RecyclerView
