--- a/Gym_App/app/src/main/res/menu/menu_search.xml
+++ b/Gym_App/app/src/main/res/menu/menu_search.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".TipoEjercicio">
+    tools:context=".activities.TipoEjercicio">
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search"
