--- a/Gym_App/app/src/main/res/layout/activity_fotgot_password.xml
+++ b/Gym_App/app/src/main/res/layout/activity_fotgot_password.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/AppTheme.Dark"
+        android:layout_gravity="center_vertical"
         android:fitsSystemWindows="true"
         android:paddingTop="56dp"
         android:paddingLeft="16dp"
@@ -50,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email" />
+                android:hint="@string/hint_email" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -62,7 +63,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="Enviar Email"/>
+            android:text="@string/button_sendemail"/>
 
         <TextView android:id="@+id/link_login"
             android:layout_width="fill_parent"
