--- a/Gym_App/app/src/main/res/layout/activity_login.xml
+++ b/Gym_App/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email" />
+                android:hint="@string/hint_email" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -49,7 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="@string/hint_password"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:autoLink="web"
             android:text="@string/label_olvidada_contraseña"
-            android:gravity="right"
+            android:gravity="end"
             android:textAppearance="?android:attr/textAppearanceSmall"/>
 
 
@@ -70,7 +70,7 @@
             android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:textAllCaps="false"
-            android:text="Login"/>
+            android:text="@string/hint_login"/>
 
         <TextView android:id="@+id/link_signup"
             android:layout_width="fill_parent"
