--- a/Gym_App/app/src/main/res/layout/activity_registro.xml
+++ b/Gym_App/app/src/main/res/layout/activity_registro.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         style="@style/AppTheme.Dark"
         android:fitsSystemWindows="true"
+        android:layout_gravity="center_vertical"
         android:paddingTop="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp">
@@ -41,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:hint="Full Name" />
+            android:hint="@string/hint_fullname" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Email Label -->
@@ -55,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email" />
+                android:hint="@string/hint_email" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -70,7 +71,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="@string/hint_password"/>
 
         </android.support.design.widget.TextInputLayout>
 
@@ -81,7 +82,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="Registrar"/>
+            android:text="@string/button_create"/>
 
         <TextView
             android:id="@+id/link_signin"
