String.xml en Ingles

--- a/Gym_App/app/src/main/res/layout/activity_login.xml
+++ b/Gym_App/app/src/main/res/layout/activity_login.xml
@@ -59,6 +59,7 @@
             android:autoLink="web"
             android:text="@string/label_olvidada_contraseña"
             android:gravity="end"
+            android:padding="12dp"
             android:textAppearance="?android:attr/textAppearanceSmall"/>
 
 
