dimens.xml limpieza

--- a/Gym_App/app/src/main/res/layout/activity_fotgot_password.xml
+++ b/Gym_App/app/src/main/res/layout/activity_fotgot_password.xml
@@ -16,6 +16,7 @@
         android:paddingRight="16dp">
 
         <ImageView
+            android:contentDescription="@string/app_image"
             android:src="@drawable/gym_logo3"
             android:layout_width="wrap_content"
             android:layout_height="72dp"
@@ -27,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="@dimen/titulo_size"
             android:layout_marginBottom="24dp"
             android:layout_gravity="center_horizontal" />
 
@@ -35,8 +36,9 @@
             android:text="@string/label_descripcion_contraseña"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/subtitulo_size"
             android:textAlignment="center"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="@dimen/margin_title_subtitle"
             android:layout_gravity="center_horizontal" />
 
 
