--- a/Gym_App/app/src/main/res/layout/activity_registro.xml
+++ b/Gym_App/app/src/main/res/layout/activity_registro.xml
@@ -17,6 +17,7 @@
         android:paddingRight="16dp">
 
         <ImageView
+            android:contentDescription="@string/app_image"
             android:src="@drawable/gym_logo3"
             android:layout_width="wrap_content"
             android:layout_height="72dp"
@@ -28,7 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:layout_marginBottom="20dp"
+            android:textSize="@dimen/subtitulo_size"
+            android:layout_marginBottom="@dimen/margin_title_subtitle"
             android:layout_gravity="center_horizontal" />
 
         <!-- Email Label -->
