--- a/Gym_App/app/src/main/res/layout/item_tipo_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/item_tipo_ejercicio.xml
@@ -33,6 +33,7 @@
         />
 
     <CheckBox
+        android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="24sp"
         android:layout_gravity="center_vertical"
