--- a/Gym_App/app/src/main/res/menu/menu_search.xml
+++ b/Gym_App/app/src/main/res/menu/menu_search.xml
@@ -3,11 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.TipoEjercicio">
+
+    <item
+        android:id="@+id/action_save"
+        android:icon="@drawable/icon_check"
+        android:title="@string/action_settings"
+        app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search"
         android:orderInCategory="100"
         android:title="@string/action_search"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         app:actionViewClass="android.support.v7.widget.SearchView" />
+
 </menu>
