--- a/Gym_App/app/src/main/res/layout/nav_header_principal.xml
+++ b/Gym_App/app/src/main/res/layout/nav_header_principal.xml
@@ -19,7 +19,7 @@
         android:scaleType="centerCrop"
         app:civ_border_width="0dp"
         app:civ_circle_background_color="@color/white"
-        android:src="@drawable/profile" />
+        android:src="@drawable/ic_perfil" />
 
     <!-- Nombre de Usuario -->
     <TextView
