--- a/Gym_App/app/src/main/res/menu/menu_anadir.xml
+++ b/Gym_App/app/src/main/res/menu/menu_anadir.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_save"
+    <item android:id="@+id/action_upload"
         android:title="@string/action_settings"
-        android:icon="@android:drawable/ic_menu_save"
+        android:icon="@drawable/ic_upload"
         app:showAsAction="always" />
 </menu>
