--- a/Gym_App/app/src/main/res/layout/dialogo_entrenamiento.xml
+++ b/Gym_App/app/src/main/res/layout/dialogo_entrenamiento.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -8,8 +7,9 @@
     <EditText
         android:id="@+id/texto_nombre"
         android:layout_margin="24dp"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:hint="@string/hint_dialogo_entrenamiento"
         />
 
