--- a/Gym_App/app/src/main/res/layout/content_descripcion_ejercicio.xml
+++ b/Gym_App/app/src/main/res/layout/content_descripcion_ejercicio.xml
@@ -28,7 +28,7 @@
     <android.support.v7.widget.CardView
         android:layout_margin="8dp"
         android:layout_width="match_parent"
-        android:layout_height="197dp"
+        android:layout_height="match_parent"
         app:cardCornerRadius="6dp">
 
         <LinearLayout
@@ -51,27 +51,6 @@
                 />
 
         </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_margin="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="197dp"
-        app:cardCornerRadius="6dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="@string/texto_repeticion"
-            android:textStyle="bold"/>
-
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        </Spinner>
 
     </android.support.v7.widget.CardView>
 
