--- a/Gym_App/app/src/main/res/layout/fragmento_perfil.xml
+++ b/Gym_App/app/src/main/res/layout/fragmento_perfil.xml
@@ -42,7 +42,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -56,16 +56,19 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/perfil_edad"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:layout_marginStart="6dp"
-                    android:text="Edad: "/>
+                    android:text="@string/fragmento_perfil_edad"/>
 
                 <TextView
+                    android:id="@+id/perfil_edad_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -83,16 +86,19 @@
                 android:gravity="center"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/perfil_altura"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:layout_marginStart="6dp"
-                    android:text="Altura: "/>
+                    android:text="@string/fragmento_perfil_altura"/>
 
                 <TextView
+                    android:id="@+id/perfil_altura_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -109,16 +115,19 @@
                 android:gravity="center"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/perfil_peso"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:layout_marginStart="6dp"
-                    android:text="Peso: "/>
+                    android:text="@string/fragmento_perfil_peso"/>
 
                 <TextView
+                    android:id="@+id/perfil_peso_edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -155,7 +164,7 @@
                 android:text="IMC: "/>
 
             <TextView
-
+                android:id="@+id/imc_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
