--- a/Gym_App/app/src/main/res/layout/activity_login.xml
+++ b/Gym_App/app/src/main/res/layout/activity_login.xml
@@ -26,9 +26,13 @@
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            boxCornerRadiusTopLeft="2dp"
+            boxCornerRadiusTopRight="2dp"
+            boxCornerRadiusBottomLeft="2dp"
+            boxCornerRadiusBottomRight="2dp"
             android:layout_marginTop="8dp">
 
-            <android.support.v7.widget.AppCompatEditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,13 +66,13 @@
             android:padding="12dp"
             android:textAppearance="?android:attr/textAppearanceSmall"/>
 
-
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_login"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="24dp"
+            android:gravity="center"
             android:padding="12dp"
             android:textAllCaps="false"
             android:text="@string/hint_login"/>
@@ -91,7 +95,6 @@
             android:textAlignment="center"
             android:layout_marginTop="@dimen/button_google_top"
             />
-
 
     </LinearLayout>
 
