--- a/Gym_App/app/src/main/res/layout/fragmento_perfil.xml
+++ b/Gym_App/app/src/main/res/layout/fragmento_perfil.xml
@@ -74,8 +74,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textColor="@color/black"
-                    android:layout_marginStart="6dp"
-                    android:text=""/>
+                    android:layout_marginStart="6dp" />
 
             </LinearLayout>
 
@@ -104,8 +103,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textColor="@color/black"
-                    android:layout_marginStart="6dp"
-                    android:text=""/>
+                    android:layout_marginStart="6dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -133,8 +131,7 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textColor="@color/black"
-                    android:layout_marginStart="6dp"
-                    android:text=""/>
+                    android:layout_marginStart="6dp" />
             </LinearLayout>
 
         </LinearLayout>
@@ -170,7 +167,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textSize="28sp"
-                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:layout_marginStart="6dp"
                 android:text=""/>
         </LinearLayout>
